--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,14 +1,13 @@
 @import "../../node_modules/bootstrap/scss/functions";
-@import './utils/variables';
-@import './utils/custom-color.scss';
+@import './helpers/variables';
+@import './components/custom-color.scss';
+@import './components/utilities.scss';
+@import './mixins/bg-gradient.scss';
 
-
-@import './layout/base.scss';
-@import './layout/font.scss';
-@import './layout/header.scss';
-@import './layout/footer.scss';
-
-
+@import './base/base.scss';
+@import './components/font.scss';
+@import './components/header.scss';
+@import './components/footer.scss';
 
 @import './pages/index.scss';
 
